--- a/assets/sass/pages/_gallery.scss
+++ b/assets/sass/pages/_gallery.scss
@@ -8,8 +8,13 @@
     width: 100%;
   }
 
-  h1 {
-    margin: 0 0 0;
+  .page-header {
+    width: 100%;
+    padding: 0 20px;
+    margin: 0 0 0 0;
+    @include respond-to('b-600') {
+      padding: 0 0 0 0;
+    }
   }
 
   em {
